# mp2-lab4-cluster

./: README.md
cluster/: CMakeLists.txt  cluster.sln
cluster/ClusterTest/: CMakeLists.txt  ClusterTest.vcxproj  test_cluster.cpp  test_processor.cpp  test_queue.cpp  test_task.cpp
cluster/cluster/: CMakeLists.txt  Cluster.h  Processor.h  Queue.h  TList.cpp  TList.h  Task.cpp  Task.h  cluster.cpp  cluster.vcxproj  cluster.vcxproj.filters  sample_cluster.cpp
